2015-05-15 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y:
	  Fix a potential bug in simplification of nested '*' and '&' in AST.

2015-05-14 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y:
	  simplify nested '&' and '*' in AST.
	* support/regression/tests/bug-2381.c:
	  Add a new test case.

2015-05-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCerr.c:
	* src/SDCCerr.h:
	* src/SDCCsymt.c:
	* src/SDCCsymt.h:
	  Add a new warning for duplicate specifiler in c89.

2015-05-08 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y:
	  Turn off warning 219 for decleration (with extern) while keep for definition (without extern).
	* support/regression/tests/bug-2102.c:
	  Improve test case.

2015-05-06 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y:
	  Do not warn if a variable of a struct with a flexible array is decleared with extern.
	* src/SDCCerr.c:
	  Change text message of warning 219.
	* support/regression/tests/bug-2102.c:
	  Supress warning 219 and improve test case.
	* support/regression/tests/bug-2274.c:
	  Supress warning 84.

2015-05-04 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/bug-2102.c:
	  Add a new test case.
	* src/SDCCerr.c:
	* src/SDCC.y:
	  Rise warning 219 for creating an instance of a struct with a flexible array.
	* src/SDCCsymt.c:
	  Remove useless code.

2015-05-04 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y:
	  Fix a bug in macro __func__ substitution.

2015-05-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_calloc.c: removed unused struct declarations
	* device/lib/pic16/libc/stdio/vfprintf.c: fixed warnings
	* src/SDCC.y: disabled W_ANONYMOUS_MEMBER
	* src/SDCCsymt.c (compStructSize): disabled W_FLEXARRAY_INSTRUCT
	* src/z80/main.c: fixed gbz80_port peephole pointers, and
	* src/ds390/main.c,
	* src/mcs51/main.c,
	* src/stm8/main.c: added peephole null-pointers, unified layout
	* src/stm8/ralloc.c (stm8_assignRegisters): fixed warning