@@ -1,3 +1,8 @@
+2015-05-17 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* sdas/linksrc/lklex.c:
+	  Check illegal object files.
+
 2015-05-15 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* src/SDCC.y:
